Syntax coloring in docs

--- a/Web/Views/Docs/dataProviders/lgLocalDataProviderFactory.cshtml
+++ b/Web/Views/Docs/dataProviders/lgLocalDataProviderFactory.cshtml
@@ -8,7 +8,7 @@
 </dl>
 
 <h3>Examples</h3>
-<pre>
+<pre highlight="javascript">
 angular.module("myApp").controller("gridController", function($scope, lgServerDataProviderFactory) {
 	$scope.dataProvider = lgServerDataProviderFactory.create("/api/things");
 });
