--- a/Web/Views/Docs/dataProviders/lgServerDataProviderFactory.cshtml
+++ b/Web/Views/Docs/dataProviders/lgServerDataProviderFactory.cshtml
@@ -36,7 +36,7 @@
 </p>
 
 <h3>Examples</h3>
-<pre>
+<pre highlight="javascript">
 angular.module("myApp").controller("gridController", function($scope, lgServerDataProviderFactory) {
 	$scope.dataProvider = lgServerDataProviderFactory.create("/api/things");
 });
