--- a/Web/Views/Docs/lightGrid/lgColumn.cshtml
+++ b/Web/Views/Docs/lightGrid/lgColumn.cshtml
@@ -27,7 +27,7 @@
 </table>
 
 <h3>Examples</h3>
-<pre ng-non-bindable>
+<pre highlight="html">
 &lt;lg-grid model="myModel" id="myGrid"&gt;
 	&lt;lg-column title="'Name'"&gt;
 		{{ rowData.name }}
