--- a/Web/Views/Docs/lightGrid/lgColumnTemplates.cshtml
+++ b/Web/Views/Docs/lightGrid/lgColumnTemplates.cshtml
@@ -3,7 +3,7 @@
 <p>Does not expose any API.</p>
 
 <h3>Examples</h3>
-<pre ng-non-bindable>
+<pre highlight="html">
 &lt;table data-lg-grid id="sampleGrid" data-model="people"&gt;
 	&lt;tr data-column-templates&gt;
 		&lt;td data-lg-column title="'First name'"&gt;{{rowData.firstName}}&lt;/td&gt;
