--- a/Web/Views/Home/Api.cshtml
+++ b/Web/Views/Home/Api.cshtml
@@ -38,7 +38,14 @@
 	</div>
 </div>
 
+@section styles
+{
+	<link rel="stylesheet" href="~/Content/highlight.css" />
+}
+
 @section scripts
 {
+	<script src="~/Scripts/highlight.pack.js"></script>
+	<script src="~/Scripts/utils.js"></script>
 	<script src="~/Scripts/docs.js"></script>
 }
