--- a/Web/Views/Docs/controls/Overview.cshtml
+++ b/Web/Views/Docs/controls/Overview.cshtml
@@ -1,3 +1,6 @@
 ﻿<h2>Auxillary controls overview</h2>
 
-<p>The directives in the <code>lightGridControls</code> are not required to use the Light Grid.</p>
+<p>
+	The directives in the <code>lightGridControls</code> module are not required to use the Light Grid itself.
+	Their purpose is to help achieving common tasks. They can also act as a starting point for developing own controls.
+</p>
