--- a/Web/Views/Docs/lightGrid/lgColumn.cshtml
+++ b/Web/Views/Docs/lightGrid/lgColumn.cshtml
@@ -28,7 +28,7 @@
 
 <h3>Examples</h3>
 <pre highlight="html">
-&lt;lg-grid model="myModel" id="myGrid"&gt;
+&lt;lg-grid model="myModel"&gt;
 	&lt;lg-column title="'Name'"&gt;
 		{{ rowData.name }}
 	&lt;/lg-column&gt;
