--- a/Web/Views/Home/Api.cshtml
+++ b/Web/Views/Home/Api.cshtml
@@ -3,7 +3,7 @@
 	ViewBag.Title = "API documentation";
 }
 <h1>API documentation</h1>
-<p>Still in progress...</p>
+<p>Here you will find a description of all directives you can use to build the grid you need.</p>
 <div class="row" ng-app="lightGridDocs">
 	<div class="col-md-3">
 		<div class="panel panel-default">
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 	<div class="col-md-9">
-		<div data-ng-view></div>
+		<div id="view" data-ng-view></div>
 	</div>
 </div>
 
