--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Light Grid - @ViewBag.Title</title>
 		<link rel="shortcut icon" href="~/favicon.png"/>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"/>
 		@Styles.Render("~/Content/css")
 		@RenderSection("styles", false)
 	</head>
