--- a/Web/Views/Home/Demos.cshtml
+++ b/Web/Views/Home/Demos.cshtml
@@ -20,6 +20,7 @@
 					<li><a href="#/hidden-columns">Hidden columns</a></li>
 					<li><a href="#/fully-featured-local">Fully featured (local data)</a></li>
 					<li><a href="#/server-side-processing">Server-side processing</a></li>
+					<li><a href="#/custom-element">Custom element</a></li>
 				</ul>
 			</div>
 		</div>
