--- a/Web/Views/Demos/clientSideSearch.cshtml
+++ b/Web/Views/Demos/clientSideSearch.cshtml
@@ -17,12 +17,20 @@
 			<input type="text" ng-model="filterExpression" class="form-control" placeholder="type here to search" />
 		</div>
 	</div>
-	<table lg-grid id="sampleGrid" class="table table-striped" model="dataProvider.getGridModel()">
+
+	<table lg-grid class="table table-striped" model="dataProvider.getGridModel()">
+		<thead>
+			<tr>
+				<th>Make</th>
+				<th>Model</th>
+				<th>Engine</th>
+			</tr>
+		</thead>
 		<tbody>
-			<tr lg-column-templates>
-				<td lg-column title="'Make'">{{ rowData.make }}</td>
-				<td lg-column title="'Model'">{{ rowData.model }}</td>
-				<td lg-column title="'Engine'">{{ rowData.engine }}</td>
+			<tr lg-row>
+				<td>{{ row.data.make }}</td>
+				<td>{{ row.data.model }}</td>
+				<td>{{ row.data.engine }}</td>
 			</tr>
 		</tbody>
 	</table>
