Updating docs for 0.3

--- a/Web/Views/Docs/lightGrid/lgGrid.cshtml
+++ b/Web/Views/Docs/lightGrid/lgGrid.cshtml
@@ -29,11 +29,6 @@
 </table>
 
 <h3>Examples</h3>
-<h4>Custom <code>lg-grid</code> element</h4>
 <pre highlight="html">
-&lt;lg-grid model="myModel" id="myGrid"&gt;&lt;/lg-grid&gt;
-</pre>
-<h4>Fully HTML-compliant markup</h4>
-<pre highlight="html">
-&lt;table data-lg-grid id="myGrid" data-model="myModel"&gt;&lt;/table&gt;
+&lt;table lg-grid model="myModel"&gt;&lt;/table&gt;
 </pre>
