Fixed demo; updated grid to latest version

--- a/Web/Views/Demos/fullyFeaturedLocal.cshtml
+++ b/Web/Views/Demos/fullyFeaturedLocal.cshtml
@@ -119,7 +119,7 @@
 					</lg-view>
 				</td>
 
-				<td>
+				<td style="width: 200px; text-align: right;">
 					<div lg-view>
 						<button class="btn btn-default btn-sm" lg-switch-view="edit">Edit</button>
 						<button class="btn btn-default btn-sm" lg-toggle-expanded-row="detailsTemplate.html">Details</button>
