--- a/Web/Views/Demos/localEditableRow.cshtml
+++ b/Web/Views/Demos/localEditableRow.cshtml
@@ -22,21 +22,21 @@
 				<td width="28%">
 					<div lg-view>{{ row.data.make }}</div>
 					<div lg-view="edit">
-						<input ng-model="viewData.make" class="form-control input-sm" />
+						<input ng-model="row.viewModel.make" class="form-control input-sm" />
 					</div>
 				</td>
 
 				<td width="28%">
 					<div lg-view>{{ row.data.model }}</div>
 					<div lg-view="edit">
-						<input ng-model="viewData.model" class="form-control input-sm" />
+						<input ng-model="row.viewModel.model" class="form-control input-sm" />
 					</div>
 				</td>
 
 				<td width="28%">
 					<div lg-view>{{ row.data.engine }}</div>
 					<div lg-view="edit">
-						<input ng-model="viewData.engine" class="form-control input-sm" />
+						<input ng-model="row.viewModel.engine" class="form-control input-sm" />
 					</div>
 				</td>
 
